# rank-wav-rs

./: COPYRIGHT  Cargo.toml  README.md  build.rs
docs/: ai_agent_instructions.md  architecture.md  design.md  plan.md  prd.md  research.txt  status.md
src/: cli.rs  config.rs  features.rs  lib.rs  main.rs  output.rs  scan.rs  score.rs  wav.rs
tests/: integration.rs
