[package]
name = "rank-wav-rs"
version = "0.1.0"
edition = "2024"
description = "CLI tool to rank WAV files by acoustic features"
license = "MIT"

[[bin]]
name = "rank-wav"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hound = "3.5"
rustfft = "6"
toml = "0.8"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.18"

[dev-dependencies]
tempfile = "3"
